# ChangeLog for net-dns/bind
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/bind/ChangeLog,v 1.146 2007/02/13 10:08:36 corsair Exp $

  13 Feb 2007; Markus Rothe <corsair@gentoo.org> bind-9.2.8.ebuild,
  bind-9.3.4.ebuild:
  Stable on ppc64; bug #163692

  13 Feb 2007; Marcus D. Hanwell <cryos@gentoo.org> bind-9.2.8.ebuild,
  bind-9.3.4.ebuild:
  Stable on amd64, bug 163692.

  10 Feb 2007; Jose Luis Rivero <yoswink@gentoo.org> bind-9.2.8.ebuild,
  bind-9.3.4.ebuild:
  Stable on alpha wrt security #163692

  08 Feb 2007; Tobias Scherbaum <dertobi123@gentoo.org> ChangeLog:
  Stable on ppc wrt bug #163692.

  07 Feb 2007; Gustavo Zacarias <gustavoz@gentoo.org> bind-9.2.8.ebuild,
  bind-9.3.4.ebuild:
  Stable on sparc wrt security #163692

  07 Feb 2007; Jeroen Roovers <jer@gentoo.org> bind-9.3.4.ebuild:
  Stable for HPPA (bug #163692).

  07 Feb 2007; Jeroen Roovers <jer@gentoo.org> bind-9.2.8.ebuild:
  Stable for HPPA (bug #163692).

  06 Feb 2007; Raúl Porcel <armin76@gentoo.org> bind-9.2.8.ebuild,
  bind-9.3.4.ebuild:
  x86 stable wrt security bug 163692

*bind-9.4.0_rc2 (06 Feb 2007)
*bind-9.3.4 (06 Feb 2007)
*bind-9.2.8 (06 Feb 2007)

  06 Feb 2007; Martin Jackson <mjolnir@gentoo.org>
  +files/bind-9.2.8-missing_odbc_test.patch,
  +files/bind-9.3.4-missing_odbc_test.patch,
  +files/bind-9.4.0_rc2-missing_odbc_test.patch, +bind-9.2.8.ebuild,
  +bind-9.3.4.ebuild, +bind-9.4.0_rc2.ebuild:
  Updates for bugs #163691 #163692 and #164293

  20 Dec 2006; René Nussbaumer <killerfox@gentoo.org> bind-9.3.3.ebuild:
  Stable on hppa. See bug #158217.

  19 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org> bind-9.3.3.ebuild:
  Stable on ppc wrt bug #158217.

  18 Dec 2006; Markus Rothe <corsair@gentoo.org> bind-9.2.7.ebuild,
  bind-9.3.3.ebuild:
  Stable on ppc64; bug #158217

  18 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org> bind-9.2.7.ebuild:
  Stable on sparc too bleh me
